Tidy up parameters and filenames.